--- a/portfolio.html
+++ b/portfolio.html
@@ -15,111 +15,117 @@
   </head>
 
   <body>
-    <header>
-      <nav>
-        <a href="./index.html" class="logo"><span class="logo-text">Web</span>Studio</a>
-        <ul class="site-nav list">
-          <li class="link">
-            <a href="#" class="link">Студія</a>
+    <div class="container">
+      <header>
+        <nav>
+          <a href="./index.html" class="logo"><span class="logo-text">Web</span>Studio</a>
+          <ul class="site-nav list">
+            <li class="link">
+              <a href="#" class="link">Студія</a>
+            </li>
+            <li class="link">
+              <a href="./index.html" class="link current">Портфоліо</a>
+            </li>
+            <li class="link">
+              <a href="#" class="link">Контакти</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="contacts list">
+          <li class="link-contacts">
+            <a href="#" class="link-contacts">info@devstudio.com</a>
           </li>
-          <li class="link">
-            <a href="./index.html" class="link current">Портфоліо</a>
-          </li>
-          <li class="link">
-            <a href="#" class="link">Контакти</a>
-          </li>
-        </ul>
-      </nav>
-      <ul class="contacts list">
-        <li class="link-contacts">
-          <a href="#" class="link-contacts">info@devstudio.com</a>
-        </li>
-        <li class="link-contacts">
-          <a href="#" class="link-contacts">+38 096 111 11 11</a>
-        </li>
-      </ul>
-    </header>
-    <main>
-      <section>
-        <h1 class="visually-hidden">Портфоліо</h1>
-        <ul class="filter list">
-          <li><button type="button" class="filter-button">Усі</button></li>
-          <li><button type="button" class="filter-button">Веб-сайти</button></li>
-          <li><button type="button" class="filter-button">Додатки</button></li>
-          <li><button type="button" class="filter-button">Дизайн</button></li>
-          <li><button type="button" class="filter-button">Маркетинг</button></li>
-        </ul>
-        <h2 class="visually-hidden">Роботи</h2>
-        <ul class="products list">
-          <li class="product-image">
-            <h3 class="product-title">Технокряк</h3>
-            <p class="product">Веб-сайт</p>
-            <img src="./images/imgp1.jpg" alt="Ноут на екрані якого 3 анкети з фото" width="370" />
-          </li>
-          <li class="product-image">
-            <h3 class="product-title">Постер new orlean vs golden star</h3>
-            <p class="product">Дизайн</p>
-            <img src="./images/imgp2.jpg" alt="Чоловіки грають в баскетбол" width="370" />
-          </li>
-          <li class="product-image">
-            <h3 class="product-title">Ресторан seafood</h3>
-            <p class="product">Додаток</p>
-            <img src="./images/imgp3.jpg" alt="Картинка з рибою" width="370" />
-          </li>
-          <li class="product-image">
-            <h3 class="product-title">Проєкт prime</h3>
-            <p class="product">Маркетинг</p>
-            <img src="./images/imgp4.jpg" alt="Наушники" width="370" />
-          </li>
-          <li class="product-image">
-            <h3 class="product-title">Проєкт boxes</h3>
-            <p class="product">Додаток</p>
-            <img src="./images/imgp5.jpg" alt="Дві коробки різного кольору" width="370" />
-          </li>
-          <li class="product-image">
-            <h3 class="product-title">Inspiration has no borders</h3>
-            <p class="product">Веб-сайт</p>
-            <img src="./images/imgp6.jpg" alt="Монітор з зображенням карти світу" width="370" />
-          </li>
-          <li class="product-image">
-            <h3 class="product-title">Видання limited edition</h3>
-            <p class="product">Дизайн</p>
-            <img src="./images/imgp7.jpg" alt="Відкрита книга з картинками" width="370" />
-          </li>
-          <li class="product-image">
-            <h3 class="product-title">Проєкт lab</h3>
-            <p class="product">Маркетинг</p>
-            <img src="./images/imgp8.jpg" alt="Бейжик з написом та стрічкою" width="370" />
-          </li>
-          <li class="product-image">
-            <h3 class="product-title">Growing business</h3>
-            <p class="product">Додаток</p>
-            <img src="./images/imgp9.jpg" alt="Чоловік друкує на ноутбуці" width="370" />
+          <li class="link-contacts">
+            <a href="#" class="link-contacts">+38 096 111 11 11</a>
           </li>
         </ul>
-      </section>
-    </main>
-    <footer class="footer">
-      <a href="./idex.html " class="logo-footer"><span class="logo-text">Web</span>Studio</a>
-      <address>
-        <ul class="link-items list">
-          <li class="link-adress">
-            <a
-              href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-              class="link-adress"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
-          <li class="link-item">
-            <a href="#" class="link-item">info@devstudio.com</a>
-          </li>
-          <li class="link-item">
-            <a href="#" class="link-item">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
-    </footer>
+      </header>
+      <main>
+        <section>
+          <h1 class="visually-hidden">Портфоліо</h1>
+          <ul class="filter list">
+            <li><button type="button" class="filter-button">Усі</button></li>
+            <li><button type="button" class="filter-button">Веб-сайти</button></li>
+            <li><button type="button" class="filter-button">Додатки</button></li>
+            <li><button type="button" class="filter-button">Дизайн</button></li>
+            <li><button type="button" class="filter-button">Маркетинг</button></li>
+          </ul>
+          <h2 class="visually-hidden">Роботи</h2>
+          <ul class="products list">
+            <li class="product-image">
+              <h3 class="product-title">Технокряк</h3>
+              <p class="product">Веб-сайт</p>
+              <img
+                src="./images/imgp1.jpg"
+                alt="Ноут на екрані якого 3 анкети з фото"
+                width="370"
+              />
+            </li>
+            <li class="product-image">
+              <h3 class="product-title">Постер new orlean vs golden star</h3>
+              <p class="product">Дизайн</p>
+              <img src="./images/imgp2.jpg" alt="Чоловіки грають в баскетбол" width="370" />
+            </li>
+            <li class="product-image">
+              <h3 class="product-title">Ресторан seafood</h3>
+              <p class="product">Додаток</p>
+              <img src="./images/imgp3.jpg" alt="Картинка з рибою" width="370" />
+            </li>
+            <li class="product-image">
+              <h3 class="product-title">Проєкт prime</h3>
+              <p class="product">Маркетинг</p>
+              <img src="./images/imgp4.jpg" alt="Наушники" width="370" />
+            </li>
+            <li class="product-image">
+              <h3 class="product-title">Проєкт boxes</h3>
+              <p class="product">Додаток</p>
+              <img src="./images/imgp5.jpg" alt="Дві коробки різного кольору" width="370" />
+            </li>
+            <li class="product-image">
+              <h3 class="product-title">Inspiration has no borders</h3>
+              <p class="product">Веб-сайт</p>
+              <img src="./images/imgp6.jpg" alt="Монітор з зображенням карти світу" width="370" />
+            </li>
+            <li class="product-image">
+              <h3 class="product-title">Видання limited edition</h3>
+              <p class="product">Дизайн</p>
+              <img src="./images/imgp7.jpg" alt="Відкрита книга з картинками" width="370" />
+            </li>
+            <li class="product-image">
+              <h3 class="product-title">Проєкт lab</h3>
+              <p class="product">Маркетинг</p>
+              <img src="./images/imgp8.jpg" alt="Бейжик з написом та стрічкою" width="370" />
+            </li>
+            <li class="product-image">
+              <h3 class="product-title">Growing business</h3>
+              <p class="product">Додаток</p>
+              <img src="./images/imgp9.jpg" alt="Чоловік друкує на ноутбуці" width="370" />
+            </li>
+          </ul>
+        </section>
+      </main>
+      <footer class="footer">
+        <a href="./idex.html " class="logo-footer"><span class="logo-text">Web</span>Studio</a>
+        <address>
+          <ul class="link-items list">
+            <li class="link-adress">
+              <a
+                href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                class="link-adress"
+                >м. Київ, пр-т Лесі Українки, 26</a
+              >
+            </li>
+            <li class="link-item">
+              <a href="#" class="link-item">info@devstudio.com</a>
+            </li>
+            <li class="link-item">
+              <a href="#" class="link-item">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </footer>
+    </div>
   </body>
 </html>
