--- a/portfolio.html
+++ b/portfolio.html
@@ -24,22 +24,22 @@
         <nav>
           <a href="./index.html" class="logo"><span class="logo-text">Web</span>Studio</a>
           <ul class="site-nav list">
-            <li class="link">
+            <li class="nav">
               <a href="#" class="link">Студія</a>
             </li>
-            <li class="link">
+            <li class="nav">
               <a href="./index.html" class="link current">Портфоліо</a>
             </li>
-            <li class="link">
+            <li class="nav">
               <a href="#" class="link">Контакти</a>
             </li>
           </ul>
         </nav>
         <ul class="contacts list">
-          <li class="link-contacts">
+          <li class="contact">
             <a href="#" class="link-contacts">info@devstudio.com</a>
           </li>
-          <li class="link-contacts">
+          <li class="contact">
             <a href="#" class="link-contacts">+38 096 111 11 11</a>
           </li>
         </ul>
