--- a/portfolio.html
+++ b/portfolio.html
@@ -20,8 +20,8 @@
 
   <body>
     <header>
-      <div class="container">
-        <nav>
+      <div class="container main-nav">
+        <nav class="main-nav">
           <a href="./index.html" class="logo"><span class="logo-text">Web</span>Studio</a>
           <ul class="site-nav list">
             <li class="nav">
