--- a/index.html
+++ b/index.html
@@ -56,23 +56,23 @@
         <div class="container">
           <h2 class="visually-hidden">Наші переваги</h2>
           <ul class="section-features list">
-            <li>
+            <li class="features">
               <h3 class="features-title">Увага до дітей</h3>
               <p class="text">
                 Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
               </p>
             </li>
-            <li>
+            <li class="features">
               <h3 class="features-title">Пунктуальність</h3>
               <p class="text">
                 Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
               </p>
             </li>
-            <li>
+            <li class="features">
               <h3 class="features-title">Планування</h3>
               <p class="text">Так само консультація з широким активом значною мірою зумовлює.</p>
             </li>
-            <li>
+            <li class="features">
               <h3 class="features-title">Сучасні технології</h3>
               <p class="text">
                 Значимість цих проблем настільки очевидна, що реалізація планових завдань.
