--- a/index.html
+++ b/index.html
@@ -85,21 +85,21 @@
         <div class="container">
           <h2 class="section-work">Чим ми займаємося</h2>
           <ul class="work list">
-            <li>
+            <li class="work-img">
               <img
                 src="./images/img1.jpg"
                 alt="Людина пише код на планшеті з клавіатури"
                 width="370"
               />
             </li>
-            <li>
+            <li class="work-img">
               <img
                 src="./images/img2.jpg"
                 alt="Людина розробляє макет телефона на комп'ютері"
                 width="370"
               />
             </li>
-            <li>
+            <li class="work-img">
               <img src="./images/img3.jpg" alt="Людина працює на планшеті" width="370" />
             </li>
           </ul>
@@ -110,32 +110,40 @@
           <h2 class="team">Наша команда</h2>
           <ul class="items-team list">
             <li class="team-image">
-              <h3 class="title">Ігор Дем'яненко</h3>
-              <p class="subtitle">Product Designer</p>
               <img
                 src="./images/img4.jpg"
                 alt="Чоловік в коричневій сорочці посміхається"
                 width="270"
               />
+              <div class="card">
+                <h3 class="title">Ігор Дем'яненко</h3>
+                <p class="subtitle">Product Designer</p>
+              </div>
             </li>
             <li class="team-image">
-              <h3 class="title">Ольга Рєпіна</h3>
-              <p class="subtitle">Frontend Developer</p>
               <img src="./images/img5.jpg" alt="Дівчина блондинка посміхається" width="270" />
+              <div class="card">
+                <h3 class="title">Ольга Рєпіна</h3>
+                <p class="subtitle">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-image">
-              <h3 class="title">Микола Тарасов</h3>
-              <p class="subtitle">Marketing</p>
               <img src="./images/img6.jpg" alt="Чоловік в білій сорочці посміхається" width="270" />
+              <div class="card">
+                <h3 class="title">Микола Тарасов</h3>
+                <p class="subtitle">Marketing</p>
+              </div>
             </li>
             <li class="team-image">
-              <h3 class="title">Михайло Єрмаков</h3>
-              <p class="subtitle">UI Designer</p>
               <img
                 src="./images/img7.jpg"
                 alt="Чоловік в чорній сорочці склав руки перед собою "
                 width="270"
               />
+              <div class="card">
+                <h3 class="title">Михайло Єрмаков</h3>
+                <p class="subtitle">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
