--- a/portfolio.html
+++ b/portfolio.html
@@ -137,7 +137,7 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a href="./idex.html " class="logo-footer"><span class="logo-text">Web</span>Studio</a>
+        <a href="./index.html" class="logo-footer"><span class="logo-web">Web</span>Studio</a>
         <address>
           <ul class="link-items list">
             <li class="link-adress">
@@ -149,10 +149,10 @@
                 >м. Київ, пр-т Лесі Українки, 26</a
               >
             </li>
-            <li class="link-item">
+            <li class="link-name">
               <a href="#" class="link-item">info@devstudio.com</a>
             </li>
-            <li class="link-item">
+            <li class="link-name">
               <a href="#" class="link-item">+38 096 111 11 11</a>
             </li>
           </ul>
