--- a/portfolio.html
+++ b/portfolio.html
@@ -47,8 +47,8 @@
     </header>
     <main>
       <section class="section">
+        <h1 class="visually-hidden">Портфоліо</h1>
         <div class="container">
-          <h1 class="visually-hidden">Портфоліо</h1>
           <ul class="filter list">
             <li class="filter-item"><button type="button" class="filter-button">Усі</button></li>
             <li class="filter-item">
@@ -63,75 +63,77 @@
             </li>
           </ul>
           <h2 class="visually-hidden">Роботи</h2>
-          <ul class="products list">
-            <li class="product-image">
-              <img
-                src="./images/imgp1.jpg"
-                alt="Ноут на екрані якого 3 анкети з фото"
-                width="370"
-              />
-              <div>
-                <h3 class="product-title">Технокряк</h3>
-                <p class="product">Веб-сайт</p>
-              </div>
-            </li>
-            <li class="product-image">
-              <img src="./images/imgp2.jpg" alt="Чоловіки грають в баскетбол" width="370" />
-              <div>
-                <h3 class="product-title">Постер new orlean vs golden star</h3>
-                <p class="product">Дизайн</p>
-              </div>
-            </li>
-            <li class="product-image">
-              <img src="./images/imgp3.jpg" alt="Картинка з рибою" width="370" />
-              <div>
-                <h3 class="product-title">Ресторан seafood</h3>
-                <p class="product">Додаток</p>
-              </div>
-            </li>
-            <li class="product-image">
-              <img src="./images/imgp4.jpg" alt="Наушники" width="370" />
-              <div>
-                <h3 class="product-title">Проєкт prime</h3>
-                <p class="product">Маркетинг</p>
-              </div>
-            </li>
-            <li class="product-image">
-              <img src="./images/imgp5.jpg" alt="Дві коробки різного кольору" width="370" />
-              <div>
-                <h3 class="product-title">Проєкт boxes</h3>
-                <p class="product">Додаток</p>
-              </div>
-            </li>
-            <li class="product-image">
-              <img src="./images/imgp6.jpg" alt="Монітор з зображенням карти світу" width="370" />
-              <div>
-                <h3 class="product-title">Inspiration has no borders</h3>
-                <p class="product">Веб-сайт</p>
-              </div>
-            </li>
-            <li class="product-image">
-              <img src="./images/imgp7.jpg" alt="Відкрита книга з картинками" width="370" />
-              <div>
-                <h3 class="product-title">Видання limited edition</h3>
-                <p class="product">Дизайн</p>
-              </div>
-            </li>
-            <li class="product-image">
-              <img src="./images/imgp8.jpg" alt="Бейжик з написом та стрічкою" width="370" />
-              <div>
-                <h3 class="product-title">Проєкт lab</h3>
-                <p class="product">Маркетинг</p>
-              </div>
-            </li>
-            <li class="product-image">
-              <img src="./images/imgp9.jpg" alt="Чоловік друкує на ноутбуці" width="370" />
-              <div>
-                <h3 class="product-title">Growing business</h3>
-                <p class="product">Додаток</p>
-              </div>
-            </li>
-          </ul>
+          <div class="flex-conteiner">
+            <ul class="products list">
+              <li class="product-image">
+                <img
+                  src="./images/imgp1.jpg"
+                  alt="Ноут на екрані якого 3 анкети з фото"
+                  width="370"
+                />
+                <div class="box">
+                  <h3 class="product-title">Технокряк</h3>
+                  <p class="product">Веб-сайт</p>
+                </div>
+              </li>
+              <li class="product-image">
+                <img src="./images/imgp2.jpg" alt="Чоловіки грають в баскетбол" width="370" />
+                <div class="box">
+                  <h3 class="product-title">Постер new orlean vs golden star</h3>
+                  <p class="product">Дизайн</p>
+                </div>
+              </li>
+              <li class="product-image">
+                <img src="./images/imgp3.jpg" alt="Картинка з рибою" width="370" />
+                <div class="box">
+                  <h3 class="product-title">Ресторан seafood</h3>
+                  <p class="product">Додаток</p>
+                </div>
+              </li>
+              <li class="product-image">
+                <img src="./images/imgp4.jpg" alt="Наушники" width="370" />
+                <div class="box">
+                  <h3 class="product-title">Проєкт prime</h3>
+                  <p class="product">Маркетинг</p>
+                </div>
+              </li>
+              <li class="product-image">
+                <img src="./images/imgp5.jpg" alt="Дві коробки різного кольору" width="370" />
+                <div class="box">
+                  <h3 class="product-title">Проєкт boxes</h3>
+                  <p class="product">Додаток</p>
+                </div>
+              </li>
+              <li class="product-image">
+                <img src="./images/imgp6.jpg" alt="Монітор з зображенням карти світу" width="370" />
+                <div class="box">
+                  <h3 class="product-title">Inspiration has no borders</h3>
+                  <p class="product">Веб-сайт</p>
+                </div>
+              </li>
+              <li class="product-image">
+                <img src="./images/imgp7.jpg" alt="Відкрита книга з картинками" width="370" />
+                <div class="box">
+                  <h3 class="product-title">Видання limited edition</h3>
+                  <p class="product">Дизайн</p>
+                </div>
+              </li>
+              <li class="product-image">
+                <img src="./images/imgp8.jpg" alt="Бейжик з написом та стрічкою" width="370" />
+                <div class="box">
+                  <h3 class="product-title">Проєкт lab</h3>
+                  <p class="product">Маркетинг</p>
+                </div>
+              </li>
+              <li class="product-image">
+                <img src="./images/imgp9.jpg" alt="Чоловік друкує на ноутбуці" width="370" />
+                <div class="box">
+                  <h3 class="product-title">Growing business</h3>
+                  <p class="product">Додаток</p>
+                </div>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
     </main>
