--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <button type="button" class="button">Замовити послугу</button>
         </div>
       </section>
-      <section class="section">
+      <section class="section benefits">
         <div class="container">
           <h2 class="visually-hidden">Наші переваги</h2>
           <ul class="section-features list">
